--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@mdi/react": "^1.6.1",
     "aos": "^2.3.4",
     "autoprefixer": "^10.4.16",
+    "dotenv": "^16.3.1",
     "gatsby": "^5.13.0",
     "gatsby-plugin-image": "^3.13.0",
     "gatsby-plugin-postcss": "^6.13.0",
@@ -33,5 +34,8 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "tailwindcss": "^3.4.0"
+  },
+  "devDependencies": {
+    "daisyui": "^4.5.0"
   }
 }
