--- a/package.json
+++ b/package.json
@@ -21,21 +21,21 @@
     "@mdi/js": "^7.4.47",
     "@mdi/react": "^1.6.1",
     "aos": "^2.3.4",
-    "autoprefixer": "^10.4.16",
     "dotenv": "^16.3.1",
     "gatsby": "^5.13.0",
     "gatsby-plugin-image": "^3.13.0",
-    "gatsby-plugin-postcss": "^6.13.0",
     "gatsby-plugin-react-svg": "^3.3.0",
     "gatsby-plugin-sharp": "^5.13.0",
     "gatsby-source-contentful": "^8.13.0",
     "gatsby-transformer-sharp": "^5.13.0",
-    "postcss": "^8.4.32",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "tailwindcss": "^3.4.0"
+    "react-dom": "^18.2.0"
   },
   "devDependencies": {
-    "daisyui": "^4.5.0"
+    "autoprefixer": "^10.4.16",
+    "daisyui": "^4.5.0",
+    "gatsby-plugin-postcss": "^6.13.0",
+    "postcss": "^8.4.33",
+    "tailwindcss": "^3.4.1"
   }
 }
